fix(outpost): fix level dowgrade and rebuy of outpost